test: fix tests for CreateActionPermissions (attestations)
OCD-3964